--- a/Project.toml
+++ b/Project.toml
@@ -4,4 +4,5 @@ authors = ["Charles_Kawczynski <kawczynski.charles@gmail.com>"]
 version = "0.1.0"
 
 [deps]
+PerFlagFuncs = "f3ab5380-06f0-11e9-0fb8-bff16a246b5f"
 Test = "8dfed614-e22c-5e08-85e1-65c5234f0b40"
