Fixed travis file.

--- a/.travis.yml
+++ b/.travis.yml
@@ -26,7 +26,7 @@ before_script:
 
 after_success:
   # push coverage results to Codecov
-  - julia -e 'import Pkg; cd(Pkg.dir("CLIMA")); Pkg.add("Coverage"); using Coverage; Codecov.submit(Codecov.process_folder())'
+  - julia -e 'import Pkg; cd(Pkg.dir("BetweenFlags")); Pkg.add("Coverage"); using Coverage; Codecov.submit(Codecov.process_folder())'
 
 # jobs:
 #   include:
