Added push!(LOAD_PATH,) to make.jl in docs

--- a/src/FeaturedFuncs/Project.toml
+++ b/src/FeaturedFuncs/Project.toml
@@ -5,4 +5,5 @@ version = "0.1.0"
 
 [deps]
 PerFlagFuncs = "7b10d850-1ce9-11e9-19f9-75beb9a07831"
+Test = "8dfed614-e22c-5e08-85e1-65c5234f0b40"
 UtilityFuncs = "c9219610-1ce9-11e9-3574-cd9e5668c7a1"
