Added SSH deployment to docs

--- a/.travis.yml
+++ b/.travis.yml
@@ -25,7 +25,11 @@ before_script:
 
 after_success:
   # push coverage results to Codecov
-  - julia -e 'import Pkg; cd(Pkg.dir("BetweenFlags")); Pkg.add("Coverage"); using Coverage; Codecov.submit(Codecov.process_folder())'
+  - julia -e 'import Pkg;
+                     cd(Pkg.dir("BetweenFlags"));
+                     Pkg.add("Coverage");
+                     using Coverage;
+                     Codecov.submit(Codecov.process_folder())'
 
 jobs:
   include:
@@ -34,8 +38,9 @@ jobs:
       os: linux
       script:
         - export DOCUMENTER_DEBUG="true"
-        - julia --color=yes --project=docs/ -e 'using Pkg; Pkg.develop(PackageSpec(path=pwd()));
-                                                           Pkg.instantiate();
-                                                           Pkg.build("BetweenFlags")'
+        - julia --color=yes --project=docs/ -e 'using Pkg;
+                                                      Pkg.develop(PackageSpec(path=pwd()));
+                                                      Pkg.instantiate();
+                                                      Pkg.build("BetweenFlags")'
         - julia --color=yes --project=docs/ docs/make.jl
       after_success: skip
