--- a/docs/Project.toml
+++ b/docs/Project.toml
@@ -2,6 +2,7 @@
 BetweenFlags = "0601b4d0-0592-11e9-1558-ab091b5e7996"
 Compat = "34da2185-b29b-5c13-b0c7-acf172513d20"
 Documenter = "e30172f5-a6a5-5a46-863b-614d45cd2de4"
+DocumenterTools = "35a29f4d-8980-5a13-9543-d66fff28ecb8"
 FeaturedFuncs = "54e089ee-1ce9-11e9-2fef-ad450841718f"
 Literate = "98b081ad-f1c9-55d3-8b20-4c87d4299306"
 PerFlagFuncs = "7b10d850-1ce9-11e9-19f9-75beb9a07831"
