--- a/Project.toml
+++ b/Project.toml
@@ -10,5 +10,6 @@ DocumenterTools = "35a29f4d-8980-5a13-9543-d66fff28ecb8"
 FeaturedFuncs = "54e089ee-1ce9-11e9-2fef-ad450841718f"
 Literate = "98b081ad-f1c9-55d3-8b20-4c87d4299306"
 PerFlagFuncs = "7b10d850-1ce9-11e9-19f9-75beb9a07831"
+Pkg = "44cfe95a-1eb2-52ea-b672-e2afdf69b78f"
 Test = "8dfed614-e22c-5e08-85e1-65c5234f0b40"
 UtilityFuncs = "c9219610-1ce9-11e9-3574-cd9e5668c7a1"
