--- a/Project.toml
+++ b/Project.toml
@@ -3,6 +3,9 @@ uuid = "0601b4d0-0592-11e9-1558-ab091b5e7996"
 authors = ["Charles_Kawczynski <kawczynski.charles@gmail.com>"]
 version = "1.0.0"
 
+[compat]
+julia = "1"
+
 [deps]
 Compat = "34da2185-b29b-5c13-b0c7-acf172513d20"
 Coverage = "a2441757-f6aa-5fb2-8edb-039e3f45d037"
